name:                haskell-giphy-search
version:             0.1.0.0
description:         CLI to download a GIF from Giphy based on a query
author:              CrisFeo
maintainer:          feo.cris@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-giphy-search
  main-is:             Main.hs
  build-depends:
                       aeson ==0.10.*,
                       array ==0.5.*,
                       base ==4.8.*,
                       http-conduit ==2.1.*,
                       http-types ==0.9.*,
                       bytestring ==0.10.*
  hs-source-dirs:      src
  default-language:    Haskell2010
